[gd_scene load_steps=18 format=3 uid="uid://bj2mltt8gsqow"]

[ext_resource type="Texture2D" uid="uid://dimp6o2obpb2w" path="res://sprites/folderlocked.png" id="1_6jop3"]
[ext_resource type="Script" path="res://scenes/authenticator/folderlocked.gd" id="2_7ak7n"]
[ext_resource type="FontFile" uid="uid://cpmmo07pbocsh" path="res://fonts/Vermin Vibes 1989.ttf" id="3_eeaqt"]
[ext_resource type="StyleBox" uid="uid://db2rsd8ficf4o" path="res://betterwindow.tres" id="4_i0u4u"]
[ext_resource type="Script" path="res://scenes/authenticator/authenticate_popup.gd" id="5_7g1ax"]
[ext_resource type="StyleBox" uid="uid://cqwcpaf5fy6a7" path="res://button.tres" id="6_hykfn"]
[ext_resource type="Shader" uid="uid://cw5fjbt1la28f" path="res://shaders/color_replace_shader.res" id="7_bamtq"]
[ext_resource type="Texture2D" uid="uid://jt6tdmef2yl4" path="res://sprites/checkmark-symbolic.svg" id="8_tcno7"]
[ext_resource type="StyleBox" uid="uid://djpqbyxyro8sk" path="res://invisible.tres" id="9_vpqa7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fuoey"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
anti_aliasing = false

[sub_resource type="LabelSettings" id="LabelSettings_8oeka"]
font = ExtResource("3_eeaqt")
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_p6fgv"]
font = ExtResource("3_eeaqt")

[sub_resource type="LabelSettings" id="LabelSettings_7enhi"]
font = ExtResource("3_eeaqt")
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_innwy"]
bg_color = Color(0.128631, 0.152905, 0.219597, 1)
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5rhlb"]
bg_color = Color(0.064075, 0.0793855, 0.122807, 1)
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e5rtg"]
shader = ExtResource("7_bamtq")
shader_parameter/replaceAmount = 1.0
shader_parameter/replaceColor = Color(1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_85uop"]
font = ExtResource("3_eeaqt")
font_size = 32
font_color = Color(1, 0, 0, 1)
outline_size = 4

[node name="folderlocked" type="TextureButton"]
anchors_preset = -1
anchor_left = 0.0555556
anchor_top = 0.592593
anchor_right = 0.0902778
anchor_bottom = 0.654321
offset_bottom = -3.05176e-05
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource("1_6jop3")
texture_pressed = ExtResource("1_6jop3")
stretch_mode = 0
script = ExtResource("2_7ak7n")
metadata/_edit_use_anchors_ = true

[node name="selected_panel2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.2
anchor_top = 1.025
anchor_right = 1.4
anchor_bottom = 1.325
offset_left = -16.0
offset_top = 1.0
offset_right = 16.0
offset_bottom = 29.0
theme_override_styles/panel = SubResource("StyleBoxFlat_fuoey")

[node name="filename" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.99
anchor_right = 1.0
anchor_bottom = 1.34
offset_left = -8.0
offset_top = 6.4
offset_right = 10.0
offset_bottom = 28.4001
grow_horizontal = 2
grow_vertical = 2
text = "Pasta trancada"
label_settings = SubResource("LabelSettings_8oeka")
horizontal_alignment = 1
autowrap_mode = 2

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="authenticate_popup" type="Panel" parent="." groups=["authentication"]]
layout_mode = 0
offset_left = 96.0
offset_top = -56.0
offset_right = 220.0
scale = Vector2(3, 3)
theme_override_styles/panel = ExtResource("4_i0u4u")
script = ExtResource("5_7g1ax")
metadata/_edit_group_ = true

[node name="password" type="Label" parent="authenticate_popup"]
layout_mode = 0
offset_left = 18.6667
offset_top = 28.0
offset_right = 85.6667
offset_bottom = 42.0
scale = Vector2(0.5, 0.5)
text = "Senha:"
label_settings = SubResource("LabelSettings_p6fgv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="authenticate" type="Label" parent="authenticate_popup"]
layout_mode = 0
offset_left = 24.5
offset_top = 2.0
offset_right = 126.5
offset_bottom = 16.0
scale = Vector2(0.5, 0.5)
text = "Autenticar
"
label_settings = SubResource("LabelSettings_7enhi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextEdit" type="TextEdit" parent="authenticate_popup"]
layout_mode = 0
offset_left = 50.0
offset_top = 28.0
offset_right = 327.0
offset_bottom = 65.0
scale = Vector2(0.2, 0.2)
theme_override_fonts/font = ExtResource("3_eeaqt")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_innwy")
context_menu_enabled = false
shortcut_keys_enabled = false
drag_and_drop_selection_enabled = false

[node name="confirm" type="Button" parent="authenticate_popup"]
layout_mode = 0
offset_left = 108.0
offset_top = 28.0
offset_right = 148.0
offset_bottom = 68.0
scale = Vector2(0.2, 0.2)
theme_override_styles/hover = ExtResource("6_hykfn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5rhlb")
theme_override_styles/normal = ExtResource("6_hykfn")

[node name="Checkmark-symbolic" type="Sprite2D" parent="authenticate_popup"]
texture_filter = 1
material = SubResource("ShaderMaterial_e5rtg")
position = Vector2(112, 32)
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_tcno7")

[node name="INCORRECT" type="Label" parent="authenticate_popup"]
visible = false
layout_mode = 0
offset_left = 50.0
offset_top = 36.6667
offset_right = 352.0
offset_bottom = 64.6667
scale = Vector2(0.2, 0.2)
text = "Senha incorreta"
label_settings = SubResource("LabelSettings_85uop")

[node name="Timer" type="Timer" parent="authenticate_popup"]
wait_time = 3.0

[node name="close" type="Button" parent="authenticate_popup"]
layout_mode = 0
offset_left = 114.667
offset_top = 2.0
offset_right = 122.667
offset_bottom = 10.0
focus_mode = 0
theme_override_styles/hover = ExtResource("9_vpqa7")
theme_override_styles/pressed = ExtResource("9_vpqa7")
theme_override_styles/normal = ExtResource("9_vpqa7")

[node name="draghandle" type="Panel" parent="authenticate_popup"]
layout_mode = 0
offset_left = 1.0
offset_right = 99.0
offset_bottom = 10.0
theme_override_styles/panel = ExtResource("9_vpqa7")

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="pressed" from="authenticate_popup/confirm" to="authenticate_popup" method="_on_confirm_pressed"]
[connection signal="timeout" from="authenticate_popup/Timer" to="authenticate_popup" method="_on_timer_timeout"]
[connection signal="pressed" from="authenticate_popup/close" to="authenticate_popup" method="_on_close_pressed"]
[connection signal="gui_input" from="authenticate_popup/draghandle" to="authenticate_popup" method="_on_draghandle_gui_input"]
